--Fixed API RunCustomScrollableMenuItemsCallback to use the m_sortedItems, and not a copy (so updating the dataSource works)
--Using proper function GetOptions() where needed now
--Removed duplicate recursive loop over all (nested)submenu entries to update the values -> in function UpdateItems

-[Additions]
--Accept a custom filter function via options.customFilterFunc
--Added option.highlightContextMenuOpeningControl: highlight the openingControl passed in to ShowCustomScrollableMenu(openingControl)
--Changed IsFilterEnabled function to return false if only 1 entry in the dropdown. Updating the header to hide the filter visually then
--Added comboBox to checkbox's callback 4th param so that API funcs like RunCustomScrollableMenuItemsCallback can use it
--Added a collapsible header + button via options.headerCollapsible to toggle the header's height. State will be saved in SavedVariables per openingControl or combobox name.
--Added option.headerCollapsed to always show the collapsible header at that state if the menu opens

--Added API function GetCustomScrollableMenuRowData(rowControl)

-[Changes]
--Callback functions for checkboxes now use the similar signature like normal entry callbacks:	function(comboBox, itemName, item, checked)


-v- ---------------LSM v2.21 - 2024-06-02---------------------------------------------------------------------------- -v-
-[Fixes]-
--Search/filter edtibox resets to empty if options.enableFilter == false


-v- ---------------LSM v2.2 - 2024-06-02---------------------------------------------------------------------------- -v-
-[Fixes]-
--Open and close clicks
--Context menus open & close, and other bugs
--Sizes
--Highlights
--Non clickable items
--MultiIcons
--Sounds
--Checkboxes
--Entry type determination
--Row's dataSource etc. updating
--Tooltips & custom tooltips
--API functions
--Callbacks (some callback parameters have changed!)
--Behavor of menus and contextmenus if ZO_Menu is used in addition